--- a/style.css
+++ b/style.css
@@ -44,7 +44,15 @@ h1{
     box-sizing: border-box;
     margin-top: 30px;
     color: cornflowerblue;  
-    
+   
+}
+
+ul{
+    list-style-type: none;
+    text-align: left;
+    margin-left: 20px;
+    line-height: 25px;    
+    font-size: 20px;
 }
 
 .content input{
@@ -59,5 +67,21 @@ h1{
 
 h2{
     margin-top: 40px;
+    margin-bottom: 10px;
     color: var(--color-blue);
+}
+
+.clickable{
+    cursor: pointer;
+}
+
+.deleteButton{
+    color: white;
+    font-weight: bold;
+    background-color: darkred;
+    margin-right: 10px;
+    padding: 2px;
+    border-radius: 50%;
+    width: 15px;
+   
 }
